@@ -1,0 +1,8 @@
+=======================
+agate.mapped_sequence
+=======================
+
+.. automodule:: agate.mapped_sequence
+    :members:
+    :undoc-members:
+    :show-inheritance:
