@@ -1,0 +1,8 @@
+=======================
+agate.warns
+=======================
+
+.. automodule:: agate.warns
+    :members:
+    :undoc-members:
+    :show-inheritance:
