@@ -48,8 +48,6 @@ def confessions(data):
 
 @proof.never_cache
 def median_age(data):
-    # with_age = data['exonerations'].where(lambda row: row['age'] is not None)
-
     median_age = data['exonerations'].columns['age'].aggregate(agate.Median())
 
     print('Median age at time of arrest: %i' % median_age)
