@@ -1,6 +1,7 @@
 0.12.0
 ------
 
+* New tutorials section: "Navigating table data" (#315)
 * 100% test coverage reached. (#312)
 * NullCalculationError is now a warning instead of an error. (#311)
 * TableSet is now a subclass of MappedSequence.
